feat: add product management endpoints and update models for product input validation, add swagger
